--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#2e7d32</color>
+    <color name="colorPrimaryLight">#60ad5e</color>
+    <color name="colorPrimaryDark">#005005</color>
+    <color name="colorPrimaryText">#fff</color>
+
+    <color name="colorAccent">#ff4081</color>
+    <color name="colorAccentLight">#ff79b0</color>
+    <color name="colorAccentDark">#c60055</color>
+    <color name="colorAccentText">#fff</color>
 </resources>
